<resources>
    <string name="app_name">PS Calculator</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="area_of_failed_section">% Area of Failed Section</string>
    <string name="data_for_failed_section">Data For Failed Section</string>
    <string name="submit">Submit</string>
    <string name="note_if_the_road_is_in_worst_condition_then_choose_the_failed_section_option_otherwise_enter_the_details_below">(Note: If the road is in worst condition,then choose the failed section option; otherwise enter the details below)</string>
    <string name="tap_here_for_failed_section">Tap Here For failed Section</string>
    <string name="enter_your_data">Enter Your Data</string>
    <string name="cracking_width_mm">Cracking Width (mm)</string>
    <string name="cracking_area">Cracking % Area</string>
    <string name="number_of_potholes">Number of Potholes</string>
    <string name="rut_depth_mm">Rut Depth (mm)</string>
    <string name="rutting_area">Rutting % Area</string>
    <string name="ravelling">Ravelling</string>
    <string name="noticealble_loss_of_material">Noticealble Loss of Material</string>
    <string name="surface_texture_appears_as_open">Surface Texture Appears as Open</string>
    <string name="wide_open_texture_with_loose_materials">Wide Open Texture with loose Materials</string>
    <string name="severe_stripping_of_aggregates">Severe Stripping of Aggregates</string>
    <string name="pothole_volume_cc">Pothole Volume (cc)</string>
    <string name="affected_distance_from_edge_mm">Affected distance from edge (mm)</string>
    <string name="edge_break_of_length">Edge Break % of Length</string>
    <string name="difference_in_height_mm">Difference in height (mm)</string>
    <string name="shoulder_drop_off_difference_in_height_mm">Shoulder Drop Off Difference in Height (mm)</string>
    <string name="shoulder_drop_off_of_length">Shoulder Drop Off % of Length</string>
    <string name="calculate">Calculate</string>
    <string name="pavement_calculation_index">Pavement Calculation Index</string>
    <string name="international_roughness_index">International Roughness Index</string>
    <string name="social_importance_index">Social Importance Index</string>
    <string name="benkelman_beam_defelection">Benkelman Beam Defelection</string>
    <string name="priority_score">Priority Score</string>
    <string name="tap_to_calculate">Tap To Calculate</string>
    <string name="direct_method">Direct Method</string>
    <string name="indirect_method">Indirect Method</string>
    <string name="choose_and_go">Choose and Go</string>
    <string name="direct">Direct</string>
    <string name="indirect">Indirect</string>
    <string name="choose_one_of_the_methods">Choose one of the methods</string>
    <string name="enter_the_characteristic_deflection_mm">Enter the Characteristic Deflection (mm)</string>
    <string name="ravelling_area">Ravelling % Area</string>
    <string name="iri_value">IRI VALUE</string>
    <string name="enter_the_value_of_iri_in_m_km">Enter the value of IRI in m/km</string>
    <string name="rqr_comfort">RQR (COMFORT)</string>
    <string name="rqr_speed">RQR (SPEED)</string>
    <string name="good_smooth_ride_with_just_a_few_bumps_or_depression">Good (Smooth ride with just a few bumps or depression)</string>
    <string name="excellent_very_smooth_ride">Excellent (Very Smooth Ride)</string>
    <string name="fair_comfortable_ride_with_intermediate_bumps">Fair (comfortable ride with intermediate bumps)</string>
    <string name="poor_uncomfortable_rides_with_frequent_bumps">Poor (Uncomfortable rides with frequent bumps)</string>
    <string name="very_poor_uncomfortable_ride_with_constant_bumps_resulting_in_rattle_or_shake_of_vehicle">Very Poor (Uncomfortable ride with constant bumps, resulting in rattle or shake of vehicle)</string>
    <string name="excellent_70_80_kmph">Excellent (70-80 kmph)</string>
    <string name="good_50_70_kmph">Good (50-70 kmph)</string>
    <string name="fair_35_50_kmph">Fair (35-50 kmph)</string>
    <string name="poor_20_35_kmph">Poor (20-35 kmph)</string>
    <string name="very_poor_0_20_kmph">Very Poor(0-20 kmph)</string>
    <string name="btnsubmit">submit</string>
    <string name="aadt_pcu">AADT (PCU)</string>
    <string name="educatiinal_facility">Educatiinal Facility</string>
    <string name="number_of_weekly_markets">Number of Weekly Markets</string>
    <string name="number_of_daily_markets">Number of Daily Markets</string>
    <string name="number_of_hospitals">Number of Hospitals</string>
    <string name="number_of_sub_centres">Number of Sub-Centres</string>
    <string name="number_of_colleges">Number of Colleges</string>
    <string name="number_of_high_schools">Number of High Schools</string>
    <string name="number_of_lp_schools">Number of LP Schools</string>
    <string name="enter_the_value_of_aadt">Enter the value oF AADT</string>
    <string name="sh">SH</string>
    <string name="mdr">MDR</string>
    <string name="_ind5">5</string>
    <string name="_ind4">4</string>
    <string name="_ind2">2</string>
    <string name="_ind1">1</string>
    <string name="radiobutton">RadioButton</string>
    <string name="_4">4</string>
    <string name="_ind3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="medical_facility">Medical Facility</string>
    <string name="market_facility">Market Facility</string>
    <string name="number_of_industries">Number of Industries</string>
    <string name="number_of_tourist_religious_spots">Number of Tourist/Religious spots</string>
    <string name="road_classification">Road Classification</string>
    <string name="terrain">Terrain</string>
    <string name="plain">Plain</string>
    <string name="rolling">Rolling</string>
    <string name="mountainous">Mountainous</string>
    <string name="steep">Steep</string>
    <string name="_3">3</string>
    <string name="tour5">tour5</string>
    <string name="_5">5</string>
    <string name="calculatesii">Calculate</string>
    <string name="_0ind">0</string>
    <string name="_0">0</string>
    <string name="enter_thickneess_of_different_layers_in_mm">Enter Thickneess of different layers (in mm)</string>
    <string name="surface_course_thickness_mm">Surface Course Thickness (mm)</string>
    <string name="base_course_thickness_mm">Base course Thickness (mm)</string>
    <string name="sub_base_thickness_mm">Sub-base Thickness (mm)</string>
    <string name="subgrade_thickness_mm">Subgrade Thickness (mm)</string>
    <string name="cbr_value1">CBR Value</string>
    <string name="cbr_value">CBR Value</string>
    <string name="calculate_cbr">Calculate</string>
    <string name="submitcdvalue">Button</string>
    <string name="benkelman_beam_deflection">Benkelman Beam Deflection</string>
    <string name="pavement_calculation_index_x">Pavement Calculation Index</string>
    <string name="submit1">Submit</string>
    <string name="pci_final">Pavement Calculation Index</string>
    <string name="iri_final">International Roughness Index</string>
    <string name="ps_output">TextView</string>
    <string name="sii_final">Social Importance Index</string>
    <string name="bbd_final">Benkelman Beam Deflection</string>
    <string name="ps_final">Priority Score</string>
    <string name="sii_output">TextView</string>
    <string name="iri_output">TextView</string>
    <string name="pci_output">TextView</string>
    <string name="next">next</string>
    <string name="finalize">Finalize</string>
    <string name="bbd_output">TextView</string>
    <string name="how_to_find_priority_score">How to Find Priority Score ?</string>
    <string name="how_to_find_iri">How to find IRI ?</string>
    <string name="intrument_used_in_finding_iri">Intrument used in finding IRI</string>
    <string name="todo">TODO</string>
    <string name="directsii">Direct</string>
    <string name="indirectsii">Indirect</string>
    <string name="sii_value_direct">SII VALUE</string>
    <string name="enter_the_value_of_sii">Enter the value of SII</string>
    <string name="submit_direct_sii">Submit</string>
    <string name="as_the_digitalisation_has_stepped_into_our_lives_having_everything_present_at_our_fingertips_is_something_that_has_gone_ingrained_in_our_brains_smartphones_gave_a_new_face_to_service_sector_with_the_introduction_of_mobile_apps_to_the_market_mobile_apps_are_applications_designed_to_perform_a_specific_task_the_priority_score_calculator_is_such_an_app_that_predicts_a_score_that_gives_the_user_an_idea_while_choosing_among_different_pavements_for_maintenance_service_taking_account_of_four_important_factors_that_are_pci_iri_sii_and_cd_this_application_gives_us_a_rating_for_a_particular_road_pavement_based_upon_the_individual_ratings_from_the_four_factors_going_over_hundreds_of_documents_over_the_internet_just_to_know_the_pavement_priority_can_be_easily_replaced_by_this_calculator_which_is_more_user_friendly_and_consumes_much_less_time_than_the_earlier">As the digitalisation has stepped into our lives, having everything present at our fingertips is something that has gone ingrained in our brains. Smartphones gave a new face to service sector with the introduction of mobile apps to the market. Mobile apps are applications designed to perform a specific task. The PRIORITY SCORE CALCULATOR is such an app that predicts a score that gives the user an idea while choosing among different pavements for maintenance service. Taking account of four important factors that are PCI, IRI, SII and CD; this application gives us a rating for a particular road pavement based upon the individual ratings from the four factors. Going over hundreds of documents over the internet just to know the pavement priority can be easily replaced by this calculator which is more user friendly and consumes much less time than the earlier.</string>
    <string name="overview">Overview</string>
    <string name="sii_table">SII TABLE</string>
    <string name="instruments_of_iri">Instruments of IRI</string>
    <string name="manual_to_use_the_app">MANUAL TO USE THE APP</string>
    <string name="equations_for_iri_and_cd">EQUATIONS FOR IRI AND CD</string>
    <string name="pci_table">PCI TABLE</string>
    <string name="cbr_value_of_soil_subgrade">CBR Value of Soil Subgrade (%)</string>
    <string name="enter_your_data_for_100m_stretch">Enter your Data (For 100m Stretch)</string>
    <string name="enter_thickness_of_different_layers_in_mm">Enter thickness of different layers (in mm)</string>
    <string name="binder_thickness_mm">Binder Thickness (mm)</string>
    <string name="surface_thickness_mm">Surface Thickness (mm)</string>
    <string name="base_thickness_mm">Base Thickness (mm)</string>
    <string name="sub_base_thickness_mm_1">Sub-Base Thickness (mm)</string>
    <string name="enter_the_value_of_sii_out_of_40">Enter the value of SII (out of 40)</string>
</resources>