<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    tools:context=".MainActivity"
    android:background="@drawable/gradient2">

    <Button
        android:id="@+id/study1"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/buttoncolor"
        android:text="@string/manual_to_use_the_app"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/study2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/study1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/buttoncolor"
        android:text="@string/equations_for_iri_and_cd"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/study3"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/study2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/buttoncolor"
        android:text="@string/pci_table"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/studyfinal"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/study2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="193dp"
        android:background="@drawable/buttoncolor"
        android:text="@string/sii_table"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgHelpDesk"
        android:layout_width="500dp"
        android:layout_height="142dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"


        app:srcCompat="@drawable/helpdesk_banner"
        android:contentDescription="@string/todo" />

</RelativeLayout>